--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,33 @@
+# Dependencies
 node_modules/
+
+# Build
 dist/
+
+# Environment (secrets)
 .env
+.env.local
+.env.*.local
+
+# Logs
 *.log
+npm-debug.log*
+logs/
+
+# OS / IDE
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+.idea/
+.vscode/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Optional
+coverage/
+.nyc_output/
+*.tsbuildinfo
