feat(security): PAX_* env names, require x-service-key on API routes, CORS in production

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-SERVICE_HOST=0.0.0.0
-SERVICE_PORT=9002
-ADMIN_API_URL=http://localhost:3000/api/admin
-SERVICE_KEY=your-internal-service-key-same-as-admin-api
+# ═══════════════════════════════════════════════════════════════
+# Modulys Pax — Core Service (exemplo)
+# ═══════════════════════════════════════════════════════════════
+
+PAX_CORE_HOST=0.0.0.0
+PAX_CORE_PORT=9002
+
+PAX_ADMIN_API_URL=http://localhost:3000/api/admin
+# Mesmo valor da Admin API (PAX_SERVICE_KEY)
+PAX_SERVICE_KEY="modulys-pax-internal-service-key-dev-change-in-production"
+
 LOG_LEVEL=info
+# Em produção: PAX_CORS_ORIGIN=https://app.exemplo.com
+# PAX_CORS_ORIGIN=
